// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Snapshot Tests renders disabled Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class="fui-Slider-rail"
    />
    <div
      class="fui-Slider-thumb"
    />
    <input
      class=""
      disabled=""
      id="slider-1"
      max="10"
      min="0"
      step="1"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders horizontal Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class="fui-Slider-rail"
    />
    <div
      class="fui-Slider-thumb"
    />
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      step="1"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders horizontal origin Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class="fui-Slider-rail"
    />
    <div
      class="fui-Slider-thumb"
    />
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      step="1"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders vertical Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class="fui-Slider-rail"
    />
    <div
      class="fui-Slider-thumb"
    />
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      step="1"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider Snapshot Tests renders vertical origin Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class="fui-Slider-rail"
    />
    <div
      class="fui-Slider-thumb"
    />
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      step="1"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider renders disabled Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class=""
    />
    <div
      class=""
    />
    <input
      class=""
      disabled=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider renders horizontal Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class=""
    />
    <div
      class=""
    />
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider renders horizontal origin Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class=""
    />
    <div
      class=""
    />
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class=""
    />
    <div
      class=""
    />
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
  </div>
</div>
`;

exports[`Slider renders vertical origin Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
  >
    <div
      class=""
    />
    <div
      class=""
    />
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
  </div>
</div>
`;
